[package]
name = "piragua"
version = "0.1.16"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
license = "apache2/gplv2"

[dependencies]
base64 = "*"
clap = "*"
gfapi-sys  = "~1.0" # gfapi
gluster = "~0.8" # CLI library
itertools = "*"
libc = "*"
jsonwebtoken = "~2.0"
log = "*"
rocket = "~0.3"
rocket_codegen = "~0.3"
rocket_contrib = "~0.3"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
uuid = {version="*", features = ["v4", "serde"] }
